add swaggo api doc
